# torchft

./: .flake8  .gitignore  .lintrunner.toml  .pyre_configuration  .rustfmt.toml  .torchxconfig  .watchmanconfig  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  pyproject.toml  trace_analysis.py  train_ddp.py  train_diloco.py
.github/workflows/: docs.yaml  lint.yaml  nightly.yaml  unittest-mac.yaml  unittest.yaml
docs/: .gitignore  Makefile  requirements.txt
docs/source/: api.rst  assumptions_and_recommendations.rst  checkpointing.rst  conf.py  coordination.rst  data.rst  ddp.rst  index.rst  local_sgd.rst  manager.rst  optim.rst  parameter_server.rst  process_group.rst  protocol.rst
examples/monarch/: README.md  train_distributed.py
examples/monarch/utils/: failure.py
media/: overview.mmd
proto/: torchft.proto
scripts/: header_check.sh  lint.sh  patch_nightly_version.py  publish.sh  test.sh
src/: coordinator.rs  lib.rs  lighthouse.rs  manager.rs  net.rs  retry.rs  timeout.rs
templates/: index.html  status.html
test_fixtures/: torchft.diloco_regression_test.DiLoCoMockedUpdateTest.test_diloco_mocked_failure_recovery_0.json  torchft.diloco_regression_test.DiLoCoMockedUpdateTest.test_diloco_mocked_updates_0.json  torchft.diloco_regression_test.DiLoCoMockedUpdateTest.test_diloco_mocked_updates_1.json  torchft.diloco_regression_test.DiLoCoMockedUpdateTest.test_diloco_mocked_updates_2.json  torchft.diloco_regression_test.DiLoCoMockedUpdateTest.test_diloco_mocked_updates_4.json  torchft.diloco_regression_test.DiLoCoMockedUpdateTest.test_diloco_mocked_updates_5.json
tools/linter/adapters/: rust_linter.py
torchft/: __init__.py  _test_utils.py  _torchft.pyi  checkpointing.py  checkpointing_test.py  collectives.py  collectives_test.py  coordination.py  coordination_test.py  data.py  data_test.py  ddp.py  ddp_test.py  device_mesh.py  device_mesh_test.py  diloco_regression_test.py  diloco_trainer.py  fsdp_test.py  futures.py  futures_test.py  http.py  lighthouse_test.py  local_sgd.py  local_sgd_integ_test.py  local_sgd_test.py  manager.py  manager_integ_test.py  manager_test.py  multiprocessing.py  multiprocessing_dummy_context.py  multiprocessing_test.py  optim.py  optim_test.py  otel.py  parameter_server.py  parameter_server_test.py  process_group.py  process_group_test.py  quantization.py  quantization_test.py  (+5 more)
torchft/_test/: diloco_trainer.py  managed_work_test.py
torchft/checkpointing/: __init__.py  _rwlock.py  _serialization.py  http_transport.py  http_transport_bench.py  http_transport_test.py  pg_transport.py  pg_transport_bench.py  pg_transport_test.py  rwlock_test.py  transport.py  transport_test.py
torchft/examples/slurm/: README.md  punisher.py  runner.py
torchft/fixtures/: torchft.test_diloco_mocked_updates.DiLoCoMockedUpdateTest.test_diloco_mocked_updates_5.json
torchft/test/: diloco_fixtures_test.py  diloco_regression_test.py  test_diloco_mocked_updates.py
torchft/test/fixtures/: diloco_regression_test.DiLoCoMockedUpdateTest.test_diloco_mocked_updates_0.json  (+3 more)
